--- a/config.yaml
+++ b/config.yaml
@@ -78,4 +78,5 @@ profiles:
 # This space below is where custom yaml items (e.g. pinning
 # sandpaper and varnish versions) should live
 
+varnish: intersect-training/varnish
 
